--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "django==5.2.4",
+    "django-environ>=0.12.0",
+    "psycopg>=3.2.9",
 ]
