--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,10 @@ dependencies = [
     "django==5.2.4",
     "django-environ>=0.12.0",
     "psycopg>=3.2.9",
+    "requests>=2.32.4",
+]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.12.2",
 ]
