Add API_READ_TOKEN to .env.example and remove unused API_KEY from create_movie_database command

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DEBUG=TRUE
 SECRET_KEY=your-secret-key
 
 DATABASE_URL=psql://user:password@127.0.0.1:5432/database
+
+API_READ_TOKEN=your-api-read-token # moviedb read token
